Fix issues with not updating the sorted dialog list. Fix issues with the dialog tags spacing.

--- a/src/content/dialog/dialog-list.css
+++ b/src/content/dialog/dialog-list.css
@@ -103,6 +103,7 @@
 .dialog-tags li {
   display: inline-block;
   padding: .2em .4em;
+  margin-right: .2em;
   border-radius: var(--radius-small);
   background-color: var(--tag-bg-color, transparent);
 
